objects/vlocity_cmt__FulfilmentDiagramOPD__c.object
<CustomObject>
    <description>Represents a junction between a Fulfilment Diagram and an Orchestration Plan Definition.</description>
    <fields>
        <fullName>vlocity_cmt__FulfilmentDiagram__c</fullName>
        <description>The parent Fulfilment Diagram associated with the detail Fulfilment Diagram OPD.</description>
        <inlineHelpText>The parent Fulfilment Diagram associated with the detail Fulfilment Diagram OPD.</inlineHelpText>
        <label>Fulfilment Diagram</label>
        <referenceTo>vlocity_cmt__FulfilmentDiagram__c</referenceTo>
        <relationshipLabel>Fulfilment Diagram OPDs</relationshipLabel>
        <relationshipName>FulfilmentDiagramOPDs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OrchestrationPlanDefinition__c</fullName>
        <description>The detail Orchestration Plan Definition associated with the parent Fulfilment Diagram OPD.</description>
        <inlineHelpText>The detail Orchestration Plan Definition associated with the parent Fulfilment Diagram OPD.</inlineHelpText>
        <label>Orchestration Plan Definition</label>
        <referenceTo>vlocity_cmt__OrchestrationPlanDefinition__c</referenceTo>
        <relationshipLabel>Fulfilment Diagram OPDs</relationshipLabel>
        <relationshipName>OrchestrationPlanDefinitions</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SwimlaneOrder__c</fullName>
        <description>The swimlane display order for the Orchestration Plan Definition. For example, if 3 is specified, the Orchestration Plan Definition displays in the third swimlane. Minimum of 1 and maximum of 99.</description>
        <inlineHelpText>The swimlane display order for the Orchestration Plan Definition. For example, if 3 is specified, the Orchestration Plan Definition displays in the third swimlane. Minimum of 1 and maximum of 99.</inlineHelpText>
        <label>Swimlane Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Fulfilment Diagram OPD</label>
    <listViews>
        <fullName>vlocity_cmt__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fulfilment Diagram OPDs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>